# network_device_patcher

./: README.md  pyproject.toml
firewall_cve_webui/common/: config.py
firewall_cve_webui/core/: button_demo.py  web.py
tests/: test_firewall_cve_webui.py
